fixed grid spacing and intro

--- a/src/css/quiz.less
+++ b/src/css/quiz.less
@@ -184,7 +184,7 @@ button {
   }
 }
 
-.quotes quote-text {
+.quotes .quote-text {
   padding-top: 10px;
 }
 
