--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -172,13 +172,14 @@
   font-size: 1.1em;
   letter-spacing: 0.015em;
   padding-left: 6px;
+  padding-top: 5px;
 
   /*label*/
   text-transform: uppercase;
   font-weight: normal;
   color: @df-darkerblue;
   display: inline-block;
-  padding: 5px 8px;
+ /* padding: 5px 8px;*/
   margin: 5px auto 0;
 
   &:hover {
@@ -194,7 +195,7 @@
     .flex(0 0 49%);
   }
   @media @mobile {
-    margin-bottom: 20px; /*fix*/
+    margin-bottom: 2px;
   }
 }
 
@@ -205,8 +206,15 @@ div .grid-card img {
   }
 }
 
+div .grid-card p {
+  font-weight: bold;
+  text-align: center;
+  margin: 0px auto;
+}
+
 
 .quotes-map{
+    display: inline-block;
     max-width: 100%;
   }
 
@@ -216,8 +224,9 @@ div .grid-card img {
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.2em;
   margin: 5px auto;
+  
 }
 
